<resources>

    <string name="app_name">防疫卡口助手</string>

    <string name="login_gather_title">采集员登录</string>
    <string name="login_manager_title">管理员登录</string>
    <string name="login_phone_number">手机号码</string>
    <string name="login_pin_number">管控区PIN码</string>
    <string name="login_phone_code">验证码</string>
    <string name="login_get_phone_code">获取验证码</string>
    <string name="login_ok">登录</string>

    <string name="gather_title">体温采集上报</string>
    <string name="gather_clear">清除表单</string>
    <string name="gather_submit">提交</string>


    <string name="query_title">信息查询</string>

    <string name="config_title">设置</string>
    <string name="config_about">关于我们</string>
    <string name="config_logout">退出登录</string>

    <string name="about_title">关于我们</string>
    <string name="about_contact">联系方式：esupport@anlv365.com</string>

</resources>
